--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">foodApp</string>
     <string name="home_str">Home</string>
-    <string name="forum_str">Forun</string>
+    <string name="forum_str">Forum</string>
     <string name="groups_str">Groups</string>
     <string name="profile_str">Profile</string>
 </resources>
